<resources>
    <string-array name="rayon">
        <item>15m</item>
        <item>100m</item>
        <item>150m</item>

    </string-array>
    <string name="logo_inapp_link">https://github.com/librespeed/speedtest-android</string>
    <string name="privacy_policy">file:///android_asset/privacy_en.html</string>


    <string name="action_show">Mise à jour wifis</string>
    <string name="action_vulnerables">Wifis vulnérables</string>
    <string name="action_delete_vulnerables">Supprimer wifis vulnérables</string>
    <string name="action_settings">Configuration</string>
    <string name="action_quit">Quitter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Chargement</string>
    <string name="init_init">Loading</string>
    <string name="initFail_configError">Configuration error</string>
    <string name="initFail_retry">Retry</string>
    <string name="init_selecting">Selecting server</string>
    <string name="initFail_noServers">No servers available</string>
    <string name="serverSelect_message">Select a server</string>
    <string name="start">Start</string>
    <string name="test_dl">Download</string>
    <string name="test_ul">Upload</string>
    <string name="test_speedMeasure">Mbps</string>
    <string name="test_ping">Ping</string>
    <string name="test_jitter">Jitter</string>
    <string name="test_timeMeasure">ms</string>
    <string name="test_share">Share result</string>
    <string name="test_restart">New test</string>
    <string name="testFail_err">An error occurred</string>
    <string name="testFail_retry">Try again</string>
    <string name="privacy_open">
        <u>Privacy</u>
    </string>
    <string name="privacy_close">
        <u>Back</u>
    </string>
    <string name="app_name">Track Wifi</string>
    <string name="title_activity_tab_activity">tab_activity</string>
    <string name="tab_text_1">Wifi Radar</string>
    <string name="tab_text_2">More informations</string>
    <string name="title_activity_main">Main</string>
    <string name="Settings">Wifi Channels</string>
    <string name="Channels">Wifi Channels</string>
    <string name="speed">Speed information</string>
    <string name="Channel">Wifi channels</string>
    <string name="title_activity_speed_test">SpeedTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="devices">Devices</string>
</resources>
