<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_show" android:title="@string/action_show"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_vulnerables" android:title="@string/action_vulnerables"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_delete_vulnerables" android:title="@string/action_delete_vulnerables"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
